update moin package (comments)
- add license
- add tests (though the do not yet test anything useful)
- add vignette skeleton
- add readme (including badge for travis)
- update author field

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,15 @@
-Package: MoIn
+Package: moin
 Version: 0.1
 Date: 2017-04-11
 Title: Modelling Interactions in R
-Description: This package provides functions to calculate simple location and interaction models
-Author:
- Daniel Knitter <knitter@geographie.uni-kiel.de>,
-Maintainer: Daniel Knitter <knitter@geographie.uni-kiel.de>
-License: GPL-3
+Description: This package provides functions to calculate simple location and interaction models. It is based on the gravity and entropy maximization approaches. These can be defined within the deterrence (or cost) functions. Two functions are implmented, covered singly- as well as doubly-constrained models.
+Authors@R: c(
+  person("Daniel", "Knitter", email = "knitter@geographie.uni-kiel.de", role = c("aut","cre"))
+  )
+License: GPL-3 + file LICENSE
+Encoding: UTF-8
 RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
