Added roxygen documentation for mdm() and fiddled with dependencies

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,20 +8,19 @@ Authors@R: c(
   )
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 Suggests: knitr,
     rmarkdown,
     testthat,
-    dplyr,
     ggplot2,
     ggjoy,
     igraph,
     viridis,
-    magrittr,
     mapview,
     rgdal,
     rgeos,
     spdep
 VignetteBuilder: knitr
 Imports: bookdown
-Depends: magrittr
+Depends: dplyr,
+    magrittr
