Finished defining Hamilton function components

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(dc)
 export(dc2)
 export(h_ariadne)
 export(h_gravity)
+export(h_singly_constrained_gravity_model)
 export(hamiltonian_metrop)
 export(inverse_exponentional)
 export(inverse_power)
