--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(dc)
 export(dc2)
 export(modelgraph)
-export(modelgraph2)
+export(moin_network)
 export(sc)
 export(spatgraph_transform)
 importFrom(utils,tail)
