Updated build/doc files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(dc2)
 export(h_alonso)
 export(h_ariadne)
 export(h_constrained_gravity)
+export(h_double_constrained_gravity)
 export(h_retail)
 export(h_simple_gravity)
 export(hamiltonian_metrop)
