Added basic documentation for h_ariadne()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Authors@R: c(
   )
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0
 Suggests: knitr,
     rmarkdown,
