--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(h_constrained_gravity)
 export(h_double_constrained_gravity)
 export(h_retail)
 export(h_simple_gravity)
-export(hamiltonian_metrop)
 export(inverse_exponentional)
 export(inverse_power)
 export(mdm)
+export(metropolis)
 export(sc)
 importFrom(utils,tail)
