--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,21 @@
 Package: moin
 Version: 0.1
 Date: 2017-04-11
-Title: Modelling Interactions in R
+Title: Modelling Interactions
 Description: This package provides functions to calculate simple location and interaction models. It is based on the gravity and entropy maximization approaches. These can be defined within the deterrence (or cost) functions. Two functions are implmented, covered singly- as well as doubly-constrained models.
 Authors@R: c(
-  person("Daniel", "Knitter", email = "knitter@geographie.uni-kiel.de", role = c("aut","cre"))
-  person("Franziska", "Faupel", email = "ffaupel@ufg.uni-kiel.de", role = c("aut"))
+  person("Daniel", "Knitter", email = "knitter@geographie.uni-kiel.de", role = c("aut","cre")),
+  person("Franziska", "Faupel", email = "ffaupel@ufg.uni-kiel.de", role = c("aut")),
+  person("Joe", "Roe", email = "jwg983@hum.ku.dk", role = c("aut"))
   )
 License: GPL-3 + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0
-Suggests: knitr,
+Suggests: 
+VignetteBuilder: knitr
+Imports: bookdown,
+    knitr,
     rmarkdown,
     testthat,
     ggplot2,
@@ -22,7 +26,5 @@ Suggests: knitr,
     rgdal,
     rgeos,
     spdep
-VignetteBuilder: knitr
-Imports: bookdown
 Depends: dplyr,
     magrittr
