--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(dc)
 export(dc2)
 export(modelgraph)
+export(moin_cult_network)
 export(moin_network)
 export(sc)
 export(spatgraph_transform)
