--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,11 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-env:
-  global:
-  - REPO=$DOCKER_USER/moin
+language: R
+sudo: false
+cache: packages
+r_packages:
+  - covr
+  - Rdpack
 
-sudo: required
-
-warnings_are_errors: true
-
-language: generic
-
-# services:
-#   - docker
-
-# before_install:
-#     # create & run container using our dockerfile, i.e. compile pkg and render Rmd to Word doc
-#   - docker build -t $REPO .
-
-# # push our custom docker container to docker hub, env vars stored on travis-ci.org
-# after_success:
-#   - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-#   - export REPO=$DOCKER_USER/moin
-#   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-#   - docker build -f Dockerfile -t $REPO:$COMMIT .
-#   - docker tag $REPO:$COMMIT $REPO:$TAG
-#   - docker tag $REPO:$COMMIT $REPO:travis-$TRAVIS_BUILD_NUMBER
-#   - docker push $REPO
+after_success:
+  - Rscript -e 'library(covr); codecov()'
